# hse_spring_C-

HW1/: CMakeLists.txt  Makefile  generate_coverage_info.sh
HW1/headers/app/: app.h
HW1/headers/db/: db.h
HW1/headers/handlers/: request.h  response.h
HW1/headers/handlers/parser/: parser.h
HW1/src/: main.cpp
HW1/src/app/: app.cpp
HW1/src/db/: db.cpp
HW1/src/handlers/: request.cpp  response.cpp
HW1/src/handlers/parser/: parser.cpp
HW1/test/: database_test.cpp
seminar1/: CMakeLists.txt  Makefile  generate_coverage_info.sh  main.cpp  matrix.cpp  matrix.h  readme.md
seminar1/headers/: matrix.h
seminar1/src/: main.cpp  matrix.cpp
seminar1/test/: sem1_test.cpp
vk-test/: CMakeLists.txt  readme.md  run.sh
vk-test/.github/workflow/: ci.yml
vk-test/headers/: graph.h  graph_io.h
vk-test/src/: graph.cpp  graph_io.cpp  main.cpp
vk-test/test/: test_graph.cpp  test_graph_io.cpp
